--- a/cards/REC_BAKEDPOT_SIDE_001.yaml
+++ b/cards/REC_BAKEDPOT_SIDE_001.yaml
@@ -9,35 +9,39 @@ macros_per_serving:
   carbs_g: 40
   fat_g: 6
 primary_carb:
-  - potato
+- potato
 protein_source: []
 veg:
-  - potato
+- potato
 allergens:
-  - dairy
+- dairy
 meal_types:
-  - side
+- side
 meal_freq_cap_per_week: 1
 prep_time_min: 5
 cook_time_min: 45
 batch_friendly: true
 reheat_method:
-  - microwave
+- microwave
 ingredients:
-  - item: russet potato
-    qty: 2
-    unit: whole
-    grocery_section: produce
-  - item: sour cream
-    qty: 60
-    unit: g
-    grocery_section: dairy
-  - item: chives
-    qty: 5
-    unit: g
-    grocery_section: produce
+- item: russet potato
+  qty: 2
+  unit: whole
+  grocery_section: produce
+- item: sour cream
+  qty: 60
+  unit: g
+  grocery_section: dairy
+- item: chives
+  qty: 5
+  unit: g
+  grocery_section: produce
 steps:
-  - Bake potatoes until tender.
-  - Top with sour cream and chives.
+- Bake potatoes until tender.
+- Top with sour cream and chives.
 notes:
-  - Add butter or shredded cheese if desired.
+- Add butter or shredded cheese if desired.
+meal_slots:
+- dinner
+- lunch
+- snack
