--- a/cards/REC_CHIK_BROC_ZITI_MAIN_001.yaml
+++ b/cards/REC_CHIK_BROC_ZITI_MAIN_001.yaml
@@ -9,44 +9,47 @@ macros_per_serving:
   carbs_g: 55
   fat_g: 18
 primary_carb:
-  - pasta
+- pasta
 protein_source:
-  - chicken
+- chicken
 veg:
-  - broccoli
+- broccoli
 allergens:
-  - gluten
+- gluten
 meal_types:
-  - lunch
-  - dinner
+- lunch
+- dinner
 meal_freq_cap_per_week: 1
 prep_time_min: 15
 cook_time_min: 20
 batch_friendly: true
 reheat_method:
-  - microwave
+- microwave
 ingredients:
-  - item: chicken breast, diced
-    qty: 454
-    unit: g
-    grocery_section: meat
-  - item: ziti pasta, dry
-    qty: 185
-    unit: g
-    grocery_section: pantry
-  - item: broccoli florets
-    qty: 1
-    unit: head
-    grocery_section: produce
-  - item: olive oil
-    qty: 15
-    unit: g
-    grocery_section: oils
-  - item: garlic, minced
-    qty: 5
-    unit: g
-    grocery_section: produce
+- item: chicken breast, diced
+  qty: 454
+  unit: g
+  grocery_section: meat
+- item: ziti pasta, dry
+  qty: 185
+  unit: g
+  grocery_section: pantry
+- item: broccoli florets
+  qty: 1
+  unit: head
+  grocery_section: produce
+- item: olive oil
+  qty: 15
+  unit: g
+  grocery_section: oils
+- item: garlic, minced
+  qty: 5
+  unit: g
+  grocery_section: produce
 steps:
-  - Cook pasta and broccoli; toss with cooked chicken and garlic oil.
+- Cook pasta and broccoli; toss with cooked chicken and garlic oil.
 notes:
-  - Add parmesan or chili flakes if desired.
+- Add parmesan or chili flakes if desired.
+meal_slots:
+- dinner
+- lunch
