--- a/cards/REC_SWEETPOT_SIDE_001.yaml
+++ b/cards/REC_SWEETPOT_SIDE_001.yaml
@@ -9,29 +9,33 @@ macros_per_serving:
   carbs_g: 40
   fat_g: 2
 primary_carb:
-  - sweet_potato
+- sweet_potato
 protein_source: []
 veg: []
 allergens: []
 meal_types:
-  - side
+- side
 meal_freq_cap_per_week: 5
 prep_time_min: 5
 cook_time_min: 25
 batch_friendly: true
 reheat_method:
-  - air_fryer
-  - oven
+- air_fryer
+- oven
 ingredients:
-  - item: sweet potato
-    qty: 400
-    unit: g
-    grocery_section: produce
-  - item: olive oil
-    qty: 0.5
-    unit: tbsp
-    grocery_section: oils
+- item: sweet potato
+  qty: 400
+  unit: g
+  grocery_section: produce
+- item: olive oil
+  qty: 0.5
+  unit: tbsp
+  grocery_section: oils
 steps:
-  - Cube, season, roast/air-fry.
+- Cube, season, roast/air-fry.
 notes:
-  - Great with salmon, chicken, pork.
+- Great with salmon, chicken, pork.
+meal_slots:
+- dinner
+- lunch
+- snack
