--- a/targets.yaml
+++ b/targets.yaml
@@ -2,10 +2,12 @@ calories_min: 1400
 calories_max: 1600
 protein_min_g: 110
 
-# Optional ceilings
-# carbs_max_g: 160
-# fat_max_g: 60
+meal_slots:
+  - Lunch
+  - Dinner
+meals_per_day: 2
+include_snacks: true
+max_snacks_per_day: 1
 
-# NEW: how many different main recipes to cook in auto mode
-min_unique_main_meals: 4
+min_unique_main_meals: 5
 max_unique_main_meals: 7
